--- a/fl-project/src/main/resources/static/style.css
+++ b/fl-project/src/main/resources/static/style.css
@@ -19,6 +19,10 @@ body {
     border-bottom: 1px #212529 solid;
 }
 
+.project.green-bg {
+    background: honeydew;
+}
+
 .project-title {
     font-weight: bold;
 }
@@ -30,11 +34,16 @@ body {
     text-align: right;
 }
 
+.key-word {
+    color: limegreen;
+    text-decoration: underline;
+}
+
 .stop-word {
     color: red;
 }
 
-.stop-word-matches {
+.word-matches {
     font-size: 12px;
     font-style: italic;
 }
